Commentario CODIGO UMG en vistas centro

--- a/main_app/templates/hod_template/admin_template_umg/tmpl_listar_centro.html
+++ b/main_app/templates/hod_template/admin_template_umg/tmpl_listar_centro.html
@@ -15,6 +15,9 @@
                     <!-- /.card-header -->
                     <div class="card-body">
                         <table id="example2" class="table table-bordered table-hover">
+                            <!-- # =========================================================================================================================================
+                            # ============================================================== CODIGO UMG ====================================================================
+                            # ========================================================================================================================================= -->
                             <thead>
                                 <tr>
                                     <th>#</th>
