--- a/main_app/templates/hod_template/admin_template_umg/tmpl_editar_centro.html
+++ b/main_app/templates/hod_template/admin_template_umg/tmpl_editar_centro.html
@@ -14,6 +14,9 @@
                         <h3 class="card-title">{{page_title}}</h3>
                     </div>
 
+                    <!-- # =========================================================================================================================================
+                    # ============================================================== CODIGO UMG ===============================================================
+                    # ========================================================================================================================================= -->
                     {% include "main_app/form_template.html" with messages=messages  form=form button_text="Editar centro"%}
                 </div>
                 <!-- /.card -->
