--- a/main_app/templates/hod_template/admin_template_umg/tmpl_listar_semestre.html
+++ b/main_app/templates/hod_template/admin_template_umg/tmpl_listar_semestre.html
@@ -15,28 +15,27 @@
                     <!-- /.card-header -->
                     <div class="card-body">
                         <table id="example2" class="table table-bordered table-hover">
-                            <!-- # =========================================================================================================================================
-                            # ============================================================== CODIGO UMG ====================================================================
-                            # ========================================================================================================================================= -->
                             <thead>
                                 <tr>
                                     <th>#</th>
+                                    <th>Código</th>
                                     <th>Nombre</th>
-                                    <th>Editar</th>
                                     <th>Creación</th>
                                     <th>Edición</th>
+                                    <th>Editar</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for centro in listado_centros %}
+                                {% for semestre in listado_semestres %}
                                 <tr>
                                     <td>{{ forloop.counter }}</td>
-                                    <td>{{centro.nombre}}</td>
-                                    <td>{{carrera.fecha_creacion}}</td>
-                                    <td>{{carrera.fecha_actualizacion}}</td>
+                                    <td>{{semestre.codigo}}</td>
+                                    <td>{{semestre.nombre}}</td>
+                                    <td>{{semestre.fecha_creacion}}</td>
+                                    <td>{{semestre.fecha_actualizacion}}</td>
                                     <td>
-                                        <a href="{% url 'editar_centro' centro.id %}" class="btn btn-primary">Editar</a> -
-                                        <a href="{% url 'borrar_centro' centro.id %}" onclick="return confirm('Quieres eliminar este registro?')" class="btn btn-danger">Borrar</a> 
+                                        <a href="{% url 'editar_semestre' semestre.id %}" class="btn btn-primary">Editar</a> -
+                                        <a href="{% url 'borrar_semestre' semestre.id %}" onclick="return confirm('Quieres eliminar este registro?')" class="btn btn-danger">Borrar</a> 
                                     </td>
                                 </tr>
                                 {% endfor %}
